# martian-robots-rs

./: Cargo.toml  bad_sample.txt  sample.txt  trunc_sample.txt
src/: generator.rs  geo.rs  main.rs  mission.rs  parser.rs  print.rs  robot.rs
src/geo/: location.rs  orientation.rs
src/snapshots/: martian_robots__generator__tests__creates_mission.snap  martian_robots__generator__tests__generates_three_robots.snap
