[package]
name = "martian_robots"
version = "0.1.0"
authors = ["Viktor Charypar <charypar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combine = "4.0.0-beta.2"
rand = { version = "0.7.3", features = ["small_rng"] }
structopt = "0.3.12"
